# actors-framework

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  build_local.sh
.github/workflows/: ubuntu_clang.yaml  ubuntu_gcc.yaml
benchmark/: CMakeLists.txt  case0.hpp  case0_to_2.hpp  case1.hpp  case2.hpp  case3_to_5.hpp  classes.hpp  main.cpp  utils.cpp  utils.h
cmake/: clang_tools.cmake
doc/: description.h  doxygen_config.txt
examples/add_method/: CMakeLists.txt  main.cpp
examples/communication/: CMakeLists.txt  main.cpp
examples/delegate/: CMakeLists.txt  main.cpp
examples/key-value-storage/: CMakeLists.txt  main.cpp
examples/smart-send/: CMakeLists.txt  main.cpp
examples/spawn_actor/: CMakeLists.txt  main.cpp
examples/spawn_supervisor/: CMakeLists.txt  main.cpp
examples/testsuite/: CMakeLists.txt  forwards.hpp
examples/testsuite/network/: connection_identifying.hpp  fake_multiplexer.hpp
examples/testsuite/source/network/: connection_identifying.cpp  fake_multiplexer.cpp
header/: actors-framework.hpp
header/actor-zeta/: core.hpp  src.hpp
header/actor-zeta/detail/impl/pmr/: default_resource.ipp
header/actor-zeta/detail/pmr/: container.hpp  default_resource.hpp  memory_resource.hpp  polymorphic_allocator.hpp  uses_allocator.hpp
header/actors-framework/: broadcast.hpp  config.hpp  core.hpp  forwards.hpp  link.hpp  make_message.hpp  send.hpp  spawn.hpp  src.hpp
header/actors-framework/base/: actor.hpp  actor_abstract.hpp  address.hpp  basic_actor.hpp  choose_queue.hpp  communication_module.hpp  cooperative_actor.hpp  cooperative_actor_CAF_lockfree.hpp  cooperative_actor_moodycamel_lockfree.hpp  cooperative_actor_simple.hpp  handler.hpp  message.hpp  supervisor.hpp  supervisor_abstract.hpp
header/actors-framework/detail/: aligned_allocate.hpp  any.hpp  callable_trait.hpp  intrusive_partitioned_list.hpp  intrusive_ptr.hpp  ref_counted.hpp  simple_queue.hpp  single_reader_queue.hpp  string_view.hpp  type_list.hpp  type_traits.hpp
header/actors-framework/detail/impl/pmr/: default_resource.ipp
header/actors-framework/detail/pmr/: container.hpp  default_resource.hpp  memory_resource.hpp  polymorphic_allocator.hpp  uses_allocator.hpp
header/actors-framework/executor/: abstract_executor.hpp  executable.hpp  execution_device.hpp  executor.hpp  profiled_executor.hpp  worker.hpp
header/actors-framework/executor/policy/: profiled.hpp  unprofiled.hpp  work_sharing.hpp
header/actors-framework/impl/: handler.ipp  link.ipp  send.ipp
header/actors-framework/impl/actor/: actor.ipp  actor_abstract.ipp  address.ipp  choose_queue.ipp  communication_module.ipp  cooperative_actor.ipp  cooperative_actor_CAF_lockfree.ipp  cooperative_actor_moodycamel_lockfree.ipp  cooperative_actor_simple.ipp  supervisor.ipp  supervisor_abstract.ipp
header/actors-framework/impl/detail/: aligned_allocate.ipp  ref_counted.ipp
header/actors-framework/impl/executor/: abstract_executor.ipp  executable.ipp  execution_device.ipp  work_sharing.ipp
header/actors-framework/impl/messaging/: message.ipp
header/actors-framework/utils/: tracy_include.hpp
source/: src.cpp
test/: CMakeLists.txt
test/any/: CMakeLists.txt  classes.hpp
test/handler/: CMakeLists.txt  classes.hpp  main.cpp
test/intrusive_ptr/: CMakeLists.txt  classes.hpp
test/memory_resource/: CMakeLists.txt  classes.hpp
test/message/: CMakeLists.txt  classes.hpp
test/metaprogramming/: CMakeLists.txt  classes.hpp  main.cpp
test/polymorphic_allocator/: CMakeLists.txt  classes.hpp  main.cpp  test_memory_resource.hpp  type_id.hpp
test/resend_order/: CMakeLists.txt  classes.hpp  main.cpp
test/send/: CMakeLists.txt  classes.hpp  main.cpp
test/spawn/: CMakeLists.txt  classes.hpp  main.cpp
test/string_view/: CMakeLists.txt  classes.hpp
